--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@ Race, gender, etc. don't matter to me in terms of preferences; I'll have a go at
 
 <h3>Section 3: September 18 - November 01, 2009 (6.1/64 answers)</h3>
 <ul>
-<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and thus cannot go any further back than that. Their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied; instead, this is.</p>
+<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and thus cannot go any further back than that. Their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead; this is.</p>
+<p>Even Some More Hoar Lore!!</p>
+<p>Got it from the Man himself (Ed Greenwood)! Hoar/ Assuran is a totally Realmsian deity. No interloper status for him! Hoar is an actual creation of Ed. No designers added him in later. the Untheric and Mulhorandi panetheons as originally enviosed by Ed was asian in nature, but the desighners changed it up. But Hoar is an all orginal creation! Good to know.</p>
+<p>You can read Ed's response to my question here.</p>
+<p>He also sheds some light on the gods in General, that some of you might find disturbing.</p>
+<p>I see Hoar as one of the "Watching Gods", because hes all original baby!</p>
 <p><i>"Here's the real secret: if you read my Realms novels, you'll occasionally "hear" characters swearing by "all the Watching Gods."
 Well, unbeknownst to all but a few sages and ancient elves, that phrase, "the Watching Gods," refers to an old, old belief among intelligent races that there are far fewer actual gods than most mortals believe, and that these fewer "Watching Gods" are unwittingly worshipped under several names by clergies and devout lay followers who see them as a variety of different beings. Some sages believe the gods themselves are partially or wholly unaware that they are "split personalities" or "aspects" of the same mighty being, while others cling to the view that this is a deliberate deception (insurance, if you will, on the part of a divine being that they will always be venerated regardless of whether this or that named god falls out of favour). A few sages believe Ao and the goddess of magic best known as Mystra are the only "uber-gods" mortals have glimpsed, and that the others are hidden behind their arrays of names (for example, just one being is behind Silvanus, Eldath, Mielikki, and most of the other nature deities).
 No mortal knows the truth behind all of this, mind you, so a DM can decide whatever he or she wishes - - or choose to NOT decide, being as they can arrange matters so that mortals (including PCs) never know.
@@ -84,7 +89,22 @@ Ed</i></p>
 <li>Thus, there are ultimately six confirmed answers (between non-lore questions, fully retained questions, and NDAs invoked), one with content identified, and fifty-seven unknowns.
 </ul>
 
-<h3>Section 4: November 01 - December 02, 2009 (0/7 answers)</h3>
+<h3>Section 4: November 01 - December 02, 2009 (2/7 answers)</h3>
+<ul>
+<li><p>Two answers are discussed by the_silversword in a November 23 2009 post. It relates to Abeir and Shadowfell; it is assumed they were recent.</p>  
+<p>Perhaps Ao even favors Abeir over Toril. He did get less headaches from the Abeiran dimension of the Forgotten Realms as he had to step in and reprimand the Gods of Toril during the Time of Troubles. Or did the Primordial lords also needed some firm reminders now and then....?</p>
+<p>Well the Elemental Lords were never cast out during the Time of Troubles, or maybe Ao cast them out to Abeir?</p>
+<p>And Ed answered my questions about Abeir's Shadowfell & Feywild on loremaster.org</p>
+<p><i>All of the planes are interlinked, in ways most mortals don't fully understand. There are periodic gates between them, they temporarily and in different places impinge on each other (so one can walk "through the mists" from one to another, often without realizing it or in a different place from where such a walk was possible previously. Then there are more or less permanent gate/portal "hubs" like Sigil, ways in which some planes can "jump" travellers into another plane when certain spells are used or rifts or other planar phenomena develop, and so on. I would say the Shadowfell and Feywild accessed by Abeir and Toril are the same planes, but the two worlds access them in vastly different places.
+How one might travel depends on the purpose, urgency, and nature of the trip (if you see what I mean).</i></p>
+<p>So I would say that this confirms the exsistence of Feyspace and Shadowspace.</p>
+
+<li><p>The same post makes reference to a different question, as though it were a separate one.</p>
+<p>He also ansered my question regarding Abeirspace, which sadly looks like it does not exsist.</p>
+<p><i>If you spelljammed up off Abeir, where you found yourself would depend on WHEN you left the surface of Abeir.
+If it was immediately before, during, or after its "collision/passing through/intersection with" Toril, you would be in Realmspace (in probably very dangerous "weather" of bursts of spontaneous, uncontrolled lightning, vortices of destructive winds, wild magic, and other hairy, ferocious and everchanging side-effects of the two worlds "passing through" each other).
+If it was long before or well after that time (more than a perhaps six months or so, either way), you'd find yourself lost in the phlogiston...somewhere. (I.e. up to your DM what the nearest crystal spheres would be.) Or in another dimension altogether (again, according to your DM's desires).</i></p>
+<ul>
 
 <h3>Section 5: December 02, 2009 - January 06, 2010 (0/5 answers)</h3>
 
@@ -96,4 +116,9 @@ Ed</i></p>
 <li>Thus, there is one more answer, yet unknown, between January 6 and June 02.
 </ul>
 
+<h3>Unknown dates</h3>
+<ul>
+  <li><p>A paraphrase to an unknown answer from an unknown time, referenced by the_silversword on July 04, 2010.</p>
+    <p>Yes, gunpowder still doesnt work. I asked Ed about this on Loremaster, unfortunatly that site is underconstruction at the moment so I cant post Ed's quote, but the jist of his answer was that, yes technology still has problems functioning properly in the Realms, but ofcourse the Gondsmen have discovered some exceptions, of course Ed didnt elaborate on these exceptions, so really I guess its up to the DM on whether or not to have gunpowder or ray guns in their Realms.</p>
+</ul>
 </body>
