--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ Well, unbeknownst to all but a few sages and ancient elves, that phrase, "the Wa
 No mortal knows the truth behind all of this, mind you, so a DM can decide whatever he or she wishes - - or choose to NOT decide, being as they can arrange matters so that mortals (including PCs) never know.
 (Here, I believe, is where I'm supposed to make "Bwoohahahaha" noises.)"</i></p>
 
-<li><p>User "quale" mentions Ed Greenwood in a thread, and links to Loremaster, though not to the interactive persistent interviews. I make the assumption those were still interview questions; thankfully it is not a Realmslore question, and I'll consider it as having been, though not preserved, discarded.</p><a href='http://candlekeep.com/forum/topic.asp?TOPIC_ID=12908'>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=84</a>
+<li><p>User "quale" mentions Ed Greenwood in a thread, and links to Loremaster, though not to the interactive persistent interviews. I make the assumption those were still interview questions; thankfully it is not a Realmslore question, and I'll consider it as having been, though not preserved, discarded.</p>
+<p><a href='http://candlekeep.com/forum/topic.asp?TOPIC_ID=12908#279630'>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12908#279630</a></p>
 
 <li><p>Sanishiver makes a reference to the October 22 answer on Loremaster dot org in the REALMS-L mailing list, in a mail from December 10, 2010, regarding a character he has designed: Forthin Andramar. However, it holds no copy or paraphrase, just the way he used it in making his own homebrew War Wizards; all we know is that this is when the Bel's Blade is mentioned. <b>It was October 22, 2009.</b></p>
 
