--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@ If it was long before or well after that time (more than a perhaps six months or
 <h3>Section 5: December 02, 2009 - January 06, 2010 (1/5 answers)</h3>
 <ul>
 <li><p>On December 19 2009, user Baleful Avatar in Candlekeep quotes the following in the Questions for Ed Greenwood (2009) thread:</p>
-<p>Hey, everybody, I just spotted this over at loremaster:
+<p>Hey, everybody, I just spotted this over at loremaster:</p>
 
 
-<i>Eaerlann's symbol is the maranthae.
-Specifically, the maranthae is a small woodlands flower found throughout much of Eaerlann (and almost nowhere else in Faerun). It's faintly phosphorescent, in that it captures and gives off (as a VERY faint glow) sunlight and other radiances (e.g. a lantern).
+<i><p>Eaerlann's symbol is the maranthae.</p>
+<p>Specifically, the maranthae is a small woodlands flower found throughout much of Eaerlann (and almost nowhere else in Faerun). It's faintly phosphorescent, in that it captures and gives off (as a VERY faint glow) sunlight and other radiances (e.g. a lantern).
 As a badge or symbol, the maranthae is depicted as an eight-petaled flower seen "straight-on" from above (so the long, thin, curved-to-symmetrical-points petals occupy the four cardinal compass points and their bisectors). The petals are, as in nature, a rich blue at their central hub, shading to gold one-third of the way "out," with two-thirds of each petal gold. The maranthae is closely surrounded by a circular wreath of overlapping green leaves, points to the right (clockwise), with the ring of space between flower and circle of leaves being a light sky blue.
-There. :} Potted Realmslore!</i>
+There. :} Potted Realmslore!</p></i>
 
 
-Those words were posted by Ed of the Greenwood, in response to a question that boils down to "what is the symbol of Eaerlann?"
-Goodly Realms goodness!</p>
+<p>Those words were posted by Ed of the Greenwood, in response to a question that boils down to "what is the symbol of Eaerlann?"</p>
+<p>Goodly Realms goodness!</p>
 </ul>
 
 <h3>Section 6: January 06 - June 02, 2010 (1/2 answers)</h3>
