--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ There. :} Potted Realmslore!</p></i>
 
 <p>Those words were posted by Ed of the Greenwood, in response to a question that boils down to "what is the symbol of Eaerlann?"</p>
 <p>Goodly Realms goodness!</p>
+<p><a href=http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062</a></p>
 </ul>
 
 <h3>Section 6: January 06 - June 02, 2010 (1/2 answers)</h3>
