--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <p>Then a few months later, I was given a link to an archived version of the Wizards of the Coast forums, where I was able to track down a few more answers from Loremaster being discussed.</p>
 <p>By mere chance, on 04/01/2024, I found a last answer discussed and paraphrased in Candlekeep.</p>
 <p>So now on 11/01/2024 I moved this to a github page, so I can edit it without bugging the peeps over at Candlekeep forums. I ramble a lot.</p>
+<p>Won't you believe it, on 28/12/2024, I discovered an answer on Candlekeep which I somehow missed before. I guess that's what I'm getting for not searching thoroughly enough.</p>
+<p>Today on 01/01/2025 I took a second look at the WotC dump, and spotted two more.</p>
 
 <h2>Current finds</h2>
 <h3>Structure</h3>
@@ -46,7 +48,9 @@ Race, gender, etc. don't matter to me in terms of preferences; I'll have a go at
 <li>Nine answers are still unrecovered, likely unrecoverable.
 </ul>
 
-<h3>Section 3: September 18 - November 01, 2009 (6.1/64 answers)</h3>
+
+
+<h3>Section 3: September 18 - November 01, 2009 (7.1/64 answers)</h3>
 <ul>
 <li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and thus cannot go any further back than that. Their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead; this is.</p>
 <p>Even Some More Hoar Lore!!</p>
@@ -61,6 +65,9 @@ No mortal knows the truth behind all of this, mind you, so a DM can decide whate
 
 <li><p>User "quale" mentions Ed Greenwood in a thread, and links to Loremaster, though not to the interactive persistent interviews. I make the assumption those were still interview questions; thankfully it is not a Realmslore question, and I'll consider it as having been, though not preserved, discarded.</p>
 <p><a href='http://candlekeep.com/forum/topic.asp?TOPIC_ID=12908#279630'>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12908#279630</a></p>
+
+<li><p>User "Baleful Avatar" on Candlekeep mentions a lore drop on Illefarn on <b>October 14, 2009.</b> Snowblood cites one or two answers on Illefarn in his publication regarding Illefarn; however, it intermingles a number of sources, and it's rather difficult to tell apart what is Ed from what is not Ed. Most likely, all of Ed's answer was used. Nonetheless, we cannot be 100% certain. The suspected answers are reproduced in the corresponding Candlekeep thread, linked at the beginning of this article.</p>
+<p><a href='http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=88#280799'>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=88#280799</a></p>
 
 <li><p>Sanishiver makes a reference to the October 22 answer on Loremaster dot org in the REALMS-L mailing list, in a mail from December 10, 2010, regarding a character he has designed: Forthin Andramar. However, it holds no copy or paraphrase, just the way he used it in making his own homebrew War Wizards; all we know is that this is when the Bel's Blade is mentioned. <b>It was October 22, 2009.</b></p>
 
@@ -87,12 +94,29 @@ No mortal knows the truth behind all of this, mind you, so a DM can decide whate
 I can promise you'll learn SOME fates of SOME Chosen in a year or so.
 Ed</i></p>
 
-<li>Thus, there are ultimately six confirmed answers (between non-lore questions, fully retained questions, and NDAs invoked), one with content identified, and fifty-seven unknowns.
+<li>Thus, there are ultimately seveb confirmed answers (between non-lore questions, fully retained questions, and NDAs invoked), one with content identified, and fifty-six unknowns.
 </ul>
 
-<h3>Section 4: November 01 - December 02, 2009 (2/7 answers)</h3>
+
+
+<h3>Section 4: November 01 - December 02, 2009 (3/7 answers)</h3>
 <ul>
-<li><p>Two answers are discussed by the_silversword in a November 23 2009 post. It relates to Abeir and Shadowfell; it is assumed they were recent.</p>  
+<li><p>One answer is discussed by 18DELTA in a November 20 post at Wizards of the Coast.</p>
+<p>Post from Ed, from Loremaster</p>
+<p>You're welcome. :}</p>
+<p>I'm not sure when the final Falconfar book (entitled "Falconfar") will appear, because Rebellion bought Solaris from Black Library. However, Simon & Schuster seems to now have it being released in March 2010, in North America.</p>
+<i><p>As for the Feywild and Abeir having a Weave, the answer is: yes and no.</p>
+<p>I'm not trying to be funny or evade the question.</p>
+<p>Here's why I say both: the Feywild and Abeir, like the Realms we've long known about, have the same sorts of natural forces (wind energy, solar, tides and flowing water, convection currents, gravity, the kinetic energy of soil creep, continental drift and rising and falling tectonic plates and vulcanism, the chemical energies of all flora and fauna, and so on). What was dubbed "The Weave" in Faerun was a way of harnessing these energies, a means of calling on them to power specific effects (spell results). It was a trial-and-error-developed means of making things happen. Divine magic is one set of means, arcane magic another, and "the Weave" was a shorthand term for (one way of) understanding how to connect with and control all of these natural energies.</p>
+<p>So the Feywild and Abeir will have their own "Weaves," akin to that of the Realms but subtly different, that may well be called something else locally.</p>
+<p>As to those differences, it's something like going to a distant country and trying to plug your toaster into an electrical socket on the wall and discovering the plug won't even fit - - and if you do get it in, the toaster will probably catch fire or blow a fuse. You are encountering an electrical system, yes, but it works differently than the one you're used to. You can readily learn how to use the new local system if you had familiarity with your own system, but if you try to blunder or bull ahead without allowing for the differences, the results are going to be disappointing, perhaps spectacularly so.</p>
+<p>Or to put it another way, a Weave is like the Linnaean method of cataloguing living things (Latin species names, divisions into genus, phyla, family, and so forth). There are other ways of cataloguing those same living things, and they aren't altered merely by being catalogued one way or another.</p>
+<p>Heh. And just like real-world science and/or classification systems, wizards (and priests) in the Realms can get in to all sorts of arguments over the Weave.</p>
+<p>As can gamers, in forum discussions. :}</p></i>
+<br>
+<p>I have already asked ED a question, to contribute to this thread. Now its your turn...</p>
+
+<li><p>Two answers are discussed by the_silversword in a November 23 2009 post at Wizards of the  Coast. It relates to Abeir and Shadowfell; it is assumed they were recent.</p>  
 <p>Perhaps Ao even favors Abeir over Toril. He did get less headaches from the Abeiran dimension of the Forgotten Realms as he had to step in and reprimand the Gods of Toril during the Time of Troubles. Or did the Primordial lords also needed some firm reminders now and then....?</p>
 <p>Well the Elemental Lords were never cast out during the Time of Troubles, or maybe Ao cast them out to Abeir?</p>
 <p>And Ed answered my questions about Abeir's Shadowfell & Feywild on loremaster.org</p>
@@ -107,22 +131,28 @@ If it was immediately before, during, or after its "collision/passing through/in
 If it was long before or well after that time (more than a perhaps six months or so, either way), you'd find yourself lost in the phlogiston...somewhere. (I.e. up to your DM what the nearest crystal spheres would be.) Or in another dimension altogether (again, according to your DM's desires).</i></p>
 </li>
 </ul>
+
+
+
+
 <h3>Section 5: December 02, 2009 - January 06, 2010 (1/5 answers)</h3>
 <ul>
 <li><p>On December 19 2009, user Baleful Avatar in Candlekeep quotes the following in the Questions for Ed Greenwood (2009) thread:</p>
-<p>Hey, everybody, I just spotted this over at loremaster:</p>
+<p><a href="http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062">http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062</a></p>
+<p>Hey, everybody, I just spotted this over at loremaster:
 
 
-<i><p>Eaerlann's symbol is the maranthae.</p>
-<p>Specifically, the maranthae is a small woodlands flower found throughout much of Eaerlann (and almost nowhere else in Faerun). It's faintly phosphorescent, in that it captures and gives off (as a VERY faint glow) sunlight and other radiances (e.g. a lantern).
-As a badge or symbol, the maranthae is depicted as an eight-petaled flower seen "straight-on" from above (so the long, thin, curved-to-symmetrical-points petals occupy the four cardinal compass points and their bisectors). The petals are, as in nature, a rich blue at their central hub, shading to gold one-third of the way "out," with two-thirds of each petal gold. The maranthae is closely surrounded by a circular wreath of overlapping green leaves, points to the right (clockwise), with the ring of space between flower and circle of leaves being a light sky blue.
-There. :} Potted Realmslore!</p></i>
+<i>Eaerlann's symbol is the maranthae.</p>
+Specifically, the maranthae is a small woodlands flower found throughout much of Eaerlann (and almost nowhere else in Faerun). It's faintly phosphorescent, in that it captures and gives off (as a VERY faint glow) sunlight and other radiances (e.g. a lantern).</p>
+As a badge or symbol, the maranthae is depicted as an eight-petaled flower seen "straight-on" from above (so the long, thin, curved-to-symmetrical-points petals occupy the four cardinal compass points and their bisectors). The petals are, as in nature, a rich blue at their central hub, shading to gold one-third of the way "out," with two-thirds of each petal gold. The maranthae is closely surrounded by a circular wreath of overlapping green leaves, points to the right (clockwise), with the ring of space between flower and circle of leaves being a light sky blue.</p>
+There. :} Potted Realmslore!</i></p>
 
 
-<p>Those words were posted by Ed of the Greenwood, in response to a question that boils down to "what is the symbol of Eaerlann?"</p>
-<p>Goodly Realms goodness!</p>
-<p><a href=http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062>http://candlekeep.com/forum/topic.asp?TOPIC_ID=12023&whichpage=101#286062</a></p>
+Those words were posted by Ed of the Greenwood, in response to a question that boils down to "what is the symbol of Eaerlann?"</p>
+Goodly Realms goodness!</p>
 </ul>
+<li>Thus, four answers remain lost.
+
 
 <h3>Section 6: January 06 - June 02, 2010 (1/2 answers)</h3>
 <ul>
@@ -131,9 +161,13 @@ There. :} Potted Realmslore!</p></i>
 <li>Thus, there is one more answer, yet unknown, between January 6 and June 02.
 </ul>
 
-<h3>Unknown dates</h3>
+<h3>Unknown dates (1.1 answers)</h3>
 <ul>
-<li><p>A paraphrase to an unknown answer from an unknown time, referenced by the_silversword on July 04, 2010.</p>
+<li><p>A paraphrase to an unknown answer from an unknown time, referenced by the_silversword on July 04, 2010 at the now defunct Wizards of the Coast forums.</p>
 <p>Yes, gunpowder still doesnt work. I asked Ed about this on Loremaster, unfortunatly that site is underconstruction at the moment so I cant post Ed's quote, but the jist of his answer was that, yes technology still has problems functioning properly in the Realms, but ofcourse the Gondsmen have discovered some exceptions, of course Ed didnt elaborate on these exceptions, so really I guess its up to the DM on whether or not to have gunpowder or ray guns in their Realms.</p>
+<li><p>Another mention by sfdragon of an unrecovered answer, but at least it gives us a clue as to what was said at some point before or on December 01 2009.</p>
+<p>anyway Ed was kind to tell what Elminster's greatest regret over his life was...</p>
 </ul>
+
+
 </body>
