--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ Race, gender, etc. don't matter to me in terms of preferences; I'll have a go at
 
 <h3>Section 3: September 18 - November 01, 2009 (7.1/64 answers)</h3>
 <ul>
-<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and thus cannot go any further back than that. Their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead; this is.</p>
+<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead, as shown <a href="/2752981.htm">here</a>.</p>
+
 <p>Even Some More Hoar Lore!!</p>
 <p>Got it from the Man himself (Ed Greenwood)! Hoar/ Assuran is a totally Realmsian deity. No interloper status for him! Hoar is an actual creation of Ed. No designers added him in later. the Untheric and Mulhorandi panetheons as originally enviosed by Ed was asian in nature, but the desighners changed it up. But Hoar is an all orginal creation! Good to know.</p>
 <p>You can read Ed's response to my question here.</p>
@@ -71,15 +72,15 @@ No mortal knows the truth behind all of this, mind you, so a DM can decide whate
 
 <li><p>Sanishiver makes a reference to the October 22 answer on Loremaster dot org in the REALMS-L mailing list, in a mail from December 10, 2010, regarding a character he has designed: Forthin Andramar. However, it holds no copy or paraphrase, just the way he used it in making his own homebrew War Wizards; all we know is that this is when the Bel's Blade is mentioned. <b>It was October 22, 2009.</b></p>
 
-<li><p>Another answer was brought up, however, briefly, on October 27, 2009 by sfdragon. In context, it appeared to be recent. I assume sfdragon was Steelfiredragon in Loremaster: if so, his join date is the 19th of September, and cannot have asked before that time.</p>
+<li><p>Another answer was brought up, however, briefly, on October 27, 2009 by sfdragon. In context, it appeared to be recent. I assume sfdragon was Steelfiredragon in Loremaster: if so, his join date is the 19th of September, and cannot have asked before that time. The thread is copied <a href="/2392481.htm">here.</a></p>
 <p>hey dookie, The Most Esteamed Ed Greenwood has replied that the Thunderblessing is heavily NDA'd</p>
 
-<li><p>Another NDA was discussed by sfdragon, later on October 27 2009. The Volo NDA was not in Candlekeep, so it is assumed to have been brought up in Loremaster. However, it may have been from an earlier questioner, too.</p>
+<li><p>Another NDA was discussed by sfdragon, later on October 27 2009. The Volo NDA was not in Candlekeep, so it is assumed to have been brought up in Loremaster. However, it may have been from an earlier questioner, too. A copy of the thread is provided<a href="/2392481.htm">here</a>.</p>
 <p>not as interesting tht RAvencloak is also NDA</p>
 
 <p><b>Volo is NDA'd</b></p>
 
-<li><p>The_silversword made an oblique reference to a question regarding the Roll of Years in October 29, 2009, strongly implying one question about the Roll of Years was answered by citing an NDA.</p>
+<li><p>The_silversword made an oblique reference to a question regarding the Roll of Years in October 29, 2009, strongly implying one question about the Roll of Years was answered by citing an NDA. A copy of the thread is provided <a href="2400636.htm">here</a>.</p>
 <p>Interesting discussion going on here. I'm not sure if it could really be answered. I have a feeling an "official" answer would be something like "However you want to do it in your campaign". Personaly I agree that the souls are one with the Plane and the God, so if the god and plane are destyoed, so then are all them souls, however I think Kelemevor has some jurisdiction there and he does have the Fate domain, so maybe he knew something was up and lead souls he deemed worthy to safety? I personaly dont want to see all of Mystras faithful souls get obliterated, now all them Dark Dwarf souls can burn for all I care!</p>
 
 <p>you could ask, but you might get a nda answer</p>
@@ -87,7 +88,7 @@ No mortal knows the truth behind all of this, mind you, so a DM can decide whate
 <p>That wouldn't surprise me at all. I am so sick of NDAs. <b>Even ED's answer to my roll of years question was NDAd.</b> Like I'm going to go oh I know all the year names for the next 100 years so I dont need to buy anymore Realms products. They really need to do something with all those outstanding NDAs that will moslt likely never see the light of day, Like make a massive Realmslore article or something. Theyre sitting on a gold mine of Realmslore and should really do something with it.</p>
 
 
-<li><p>Another answer is cited by user sfdragon on October 30, 2009.</p>
+<li><p>Another answer is cited by user sfdragon on October 30, 2009. One of Solauren's thread dumps has it, shown <a href="/2400636.htm">here</a>.</p>
 <p>btw from my latest qusestion to Ed Greenwood, concerning Laeral ARunson</p>
 
 <p><i>ed3.pngI'm afraid Laeral's fate is firmly NDA'd at this time. Sorry.
@@ -101,7 +102,7 @@ Ed</i></p>
 
 <h3>Section 4: November 01 - December 02, 2009 (3/7 answers)</h3>
 <ul>
-<li><p>One answer is discussed by 18DELTA in a November 20 post at Wizards of the Coast.</p>
+<li><p>One answer is discussed by 18DELTA in a November 20 post at Wizards of the Coast.</p> Solauren's copy is reproduced <a href="/2398276.htm">here.</a>
 <p>Post from Ed, from Loremaster</p>
 <p>You're welcome. :}</p>
 <p>I'm not sure when the final Falconfar book (entitled "Falconfar") will appear, because Rebellion bought Solaris from Black Library. However, Simon & Schuster seems to now have it being released in March 2010, in North America.</p>
@@ -156,7 +157,7 @@ Goodly Realms goodness!</p>
 
 <h3>Section 6: January 06 - June 02, 2010 (1/2 answers)</h3>
 <ul>
-<li><p>One of the questions was paraphrased on January 19 2010, by user sfdragon in the Wizards of the Coast forums, in January 19 2010. He quotes it as a recent answer.</p>
+<li><p>One of the questions was paraphrased on January 19 2010, by user sfdragon in the Wizards of the Coast forums, in January 19 2010. He quotes it as a recent answer. You may consult a transcript <a href="/2491191.htm">here</a>.</p>
 <p>Unfortunately, that one is heavily NDA'd. Sorry. There are a lot of matters Realmsian I'd love to talk about, but can't - -and, yes, that's one of them. Cool things, moonblades, so lots of writers, designers, DMs, and players want to play with them.</p>
 <li>Thus, there is one more answer, yet unknown, between January 6 and June 02.
 </ul>
