Fixed more links, added more complete info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Race, gender, etc. don't matter to me in terms of preferences; I'll have a go at
 
 <h3>Section 3: September 18 - November 01, 2009 (7.1/64 answers)</h3>
 <ul>
-<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead, as shown <a href="/LoremasterRebuildProject/2752981.htm">here</a>.</p>
+<li><p>One of the answers to the_silversword here is paraphrased and linked back to the Loremaster interactive interviews. The answer is first discussed in September 24, and their join date is September 22, and thus it can't go any further back than that. It belongs either here, or in Section 2. The part where Ed confirms he wrote Hoar isn't copied, but paraphrased instead, as shown <a href="/LoremasterRebuildProject/2341731.htm">here</a>. A later thread, the year after, reproduces Ed's complete quote <a href="/LoremasterRebuildProject/2752981.htm">here</a>.</p>
 
 <p>Even Some More Hoar Lore!!</p>
 <p>Got it from the Man himself (Ed Greenwood)! Hoar/ Assuran is a totally Realmsian deity. No interloper status for him! Hoar is an actual creation of Ed. No designers added him in later. the Untheric and Mulhorandi panetheons as originally enviosed by Ed was asian in nature, but the desighners changed it up. But Hoar is an all orginal creation! Good to know.</p>
@@ -157,7 +157,7 @@ Goodly Realms goodness!</p>
 
 <h3>Section 6: January 06 - June 02, 2010 (1/2 answers)</h3>
 <ul>
-<li><p>One of the questions was paraphrased on January 19 2010, by user sfdragon in the Wizards of the Coast forums, in January 19 2010. He quotes it as a recent answer. You may consult a transcript <a href="/2491191.htm">here</a>.</p>
+<li><p>One of the questions was paraphrased on January 19 2010, by user sfdragon in the Wizards of the Coast forums, in January 19 2010. He quotes it as a recent answer. You may consult a transcript <a href="/LoremasterRebuildProject/2491191.htm">here</a>.</p>
 <p>Unfortunately, that one is heavily NDA'd. Sorry. There are a lot of matters Realmsian I'd love to talk about, but can't - -and, yes, that's one of them. Cool things, moonblades, so lots of writers, designers, DMs, and players want to play with them.</p>
 <li>Thus, there is one more answer, yet unknown, between January 6 and June 02.
 </ul>
